contaminationstatus form with dropdown choises

--- a/app/views/agents/_form_agent.html.erb
+++ b/app/views/agents/_form_agent.html.erb
@@ -25,7 +25,7 @@
       </div>
       <div class="field">
         <%= f.label :other_agent_name %><br>
-        <%= f.text_field :other_agent_name, :placeholder=>"if no agent name above match", class: "form-control"  %>
+        <%= f.text_field :other_agent_name, :placeholder=>"if no agent name above match, otherwise: n.a.", class: "form-control"  %>
       </div>
       <div class="field">
         <%= f.label :"Reference number" %><br>
