--- a/app/views/contaminationstatuses/index.html.erb
+++ b/app/views/contaminationstatuses/index.html.erb
@@ -15,6 +15,9 @@
       </div>     
 
       <div class="col-md-9" id="rightCol"> 
+        <%= link_to 'Export XLS', url_for(:format => 'xls'), class: "btn btn-success btn-sm" %> ||
+        <%= link_to 'Export CSV', url_for(:format => 'csv'), class: "btn btn-success btn-sm" %> <br><br>
+        
         <%= render 'tablecontaminationstatus' %> <br>
         <%= link_to 'New Contaminationstatus', new_contaminationstatus_path, class: "btn btn-success" %>
       </div>
