--- a/app/views/agents/index.html.erb
+++ b/app/views/agents/index.html.erb
@@ -18,7 +18,7 @@
         <%= link_to 'Export XLS', url_for(:format => 'xls'), class: "btn btn-success btn-sm" %> ||
         <%= link_to 'Export CSV', url_for(:format => 'csv'), class: "btn btn-success btn-sm" %> <br><br>
 
-        <%= render 'tableagents' %> <br>
+        <%= render 'agenttab' %> <br>
         <%= link_to 'New Agent', new_agent_path, class: "btn btn-success " %>
       </div>
 
