--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,8 +3,8 @@
 	<p class="lead">
 	    Please log in to insert data or have a look at the data.
 	</p>
-	<%= link_to "Login", '#', class: "btn btn-lg btn-success" %>
-	<%= link_to "Sign up", '#', class: "btn btn-lg btn-success" %>
+ 	<%= link_to 'Login', new_user_session_path, class: "btn btn-lg btn-success" %>
+	<%= link_to 'Sign up', new_user_registration_path, class: "btn btn-lg btn-success" %>
 </div>
 
 <div class="row marketing">
