--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -8,6 +8,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
       </button>
+        
     </div>
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -20,6 +21,24 @@
         <li class="link"><%= link_to "Admin-Area",  home_admin_path %></li> 
         <li class="link"><%= link_to "Discussions", home_discussions_path %></li>
       </ul>
+
+      <ul class="nav navbar-nav navbar-right">
+        <% if user_signed_in? %>
+          <li>
+          <%= link_to 'Logout', destroy_user_session_path, :method=>'delete' %>
+          </li>
+          <li>
+          <%= link_to 'Edit account', edit_user_registration_path %>
+          </li>
+          <% else %>
+          <li>
+            <%= link_to 'Login', new_user_session_path %>
+          </li>
+          <li>
+            <%= link_to 'Sign up', new_user_registration_path %>
+          </li>
+        <% end %>
+        </ul>
     </div>
 
   </div>
