--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
     <%= favicon_link_tag 'spiced_ori.png' %>
     <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
     <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
-    <%= javascript_include_tag :defaults, :cache => true %>
+    <%= javascript_include_tag :defaults, :cache => false %>
     <%= csrf_meta_tags %>
 
       <!--custom CSS -->
