--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
     <div id="footer" >
       <div class="row">
         <div class="col-md-12">
-          <p id="f_id">Copyright &copy; Mai Dinh Thanh</p>
+          <p id="f_id"><li class="link"><%= link_to "Impressum", home_impressum_path %></li></p>
         </div>
       </div>
     </div>
