--- a/app/views/home/impressum.html.erb
+++ b/app/views/home/impressum.html.erb
@@ -9,13 +9,14 @@ Badenschestraße 50-52<br />
 Mai Dinh Thanh<br />
 Oliver Landyszkowski<br />
 Paul-Hagen Dörr</p>
+
 <h2>Kontakt:</h2>
-<table><tr>
-<td>Telefon:</td>
-<td></td></tr>
-<tr><td>E-Mail:</td>
-<td>paul-hagen-doerr@hotmail.de</td>
-</tr></table>
+<p>E-Mail:</p>
+<p>ekremutkubas@web.de</p>
+<p>mai.dinh-thanh@bfr.bund.de </p>
+<p>olli-91-@hotmail.de</p>
+<p>paul-hagen-doerr@hotmail.de</p>
+
 <h2>Quellenangaben für die verwendeten Bilder und Grafiken:</h2>
 <p>[Namen der Agenturen und der jeweiligen Fotografen]</p>
 <p> </p>
