--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,10 @@
     <div id="footer" >
       <div class="row">
         <div class="col-md-12">
-          <p id="f_id"><li class="link"><%= link_to "Impressum", home_impressum_path %></li></p>
+          <div id="f_id">
+            <%= link_to "Impressum", home_impressum_path, class: "btn btn-info btn-sm" %>
+            <%= link_to "EU-SPICED", "http://www.spiced.eu/", class: "btn btn-info btn-sm", :target => "_blank" %>
+          </div>
         </div>
       </div>
     </div>
@@ -42,6 +45,5 @@
 
   </body>
 </html>
-
 
 
