alle unoetige files in assets geloescht, um performance zu verbessern

--- a/app/views/agents/index.html.erb
+++ b/app/views/agents/index.html.erb
@@ -16,10 +16,11 @@
       </div>     
 
       <div class="col-md-9" id="rightCol"> 
-        <%= link_to 'Export XLS', url_for(:format => 'xls'), class: "btn btn-success btn-sm" %> ||
-        <%= link_to 'Export CSV', url_for(:format => 'csv'), class: "btn btn-success btn-sm" %> <br><br>
+        <%= link_to 'New Agent', new_agent_path, class: "btn btn-success " %> ||
+        <%= link_to 'Export XLS', url_for(:format => 'xls'), class: "btn btn-success " %> ||
+        <%= link_to 'Export CSV', url_for(:format => 'csv'), class: "btn btn-success " %> <br><br>
 
-        <%= render 'agenttab' %> <br>
+        <%= render 'tableagents' %> <br>
       </div>
 
     </div>
