--- a/app/views/detections/index.html.erb
+++ b/app/views/detections/index.html.erb
@@ -14,9 +14,11 @@
         </div>
       </div>     
 
-      <div class="col-md-9" id="rightCol">         
-        <%= render 'tabledetections' %> <br>
+      <div class="col-md-9" id="rightCol">    
         <%= link_to 'New Detection', new_detection_path, class: "btn btn-success"  %>
+        <%= link_to 'Export XLS', url_for(:format => 'xls'), class: "btn btn-success " %> 
+        <%= link_to 'Export CSV', url_for(:format => 'csv'), class: "btn btn-success " %> <br><br>           
+        <%= render 'tabledetections' %> <br>
       </div>
       
     </div>
