--- a/app/views/agents/index.html.erb
+++ b/app/views/agents/index.html.erb
@@ -16,8 +16,8 @@
       </div>     
 
       <div class="col-md-9" id="rightCol"> 
-        <%= link_to 'New Agent', new_agent_path, class: "btn btn-success " %> ||
-        <%= link_to 'Export XLS', url_for(:format => 'xls'), class: "btn btn-success " %> ||
+        <%= link_to 'New Agent', new_agent_path, class: "btn btn-success " %> 
+        <%= link_to 'Export XLS', url_for(:format => 'xls'), class: "btn btn-success " %> 
         <%= link_to 'Export CSV', url_for(:format => 'csv'), class: "btn btn-success " %> <br><br>
 
         <%= render 'tableagents' %> <br>
