--- a/app/views/spikings/index.html.erb
+++ b/app/views/spikings/index.html.erb
@@ -14,10 +14,12 @@
         </div>
       </div>     
 
-      <div class="col-md-9" id="rightCol">         
+      <div class="col-md-9" id="rightCol"> 
+        <%= link_to 'New Spiking', new_spiking_path, class: "btn btn-success"  %>   
+        <%= link_to 'Export XLS', url_for(:format => 'xls'), class: "btn btn-success " %> 
+        <%= link_to 'Export CSV', url_for(:format => 'csv'), class: "btn btn-success " %> <br><br>              
         <%= render 'tablespikings' %>            
         <br>
-        <%= link_to 'New Spiking', new_spiking_path, class: "btn btn-success"  %>   
       </div>
 
     </div>
