--- a/app/views/treatments/index.html.erb
+++ b/app/views/treatments/index.html.erb
@@ -15,10 +15,12 @@
         </div>
       </div>     
 
-      <div class="col-md-9" id="rightCol">         
+      <div class="col-md-9" id="rightCol">   
+        <%= link_to 'New Treatment', new_treatment_path, class: "btn btn-success"  %>
+        <%= link_to 'Export XLS', url_for(:format => 'xls'), class: "btn btn-success " %> 
+        <%= link_to 'Export CSV', url_for(:format => 'csv'), class: "btn btn-success " %> <br><br>            
         <%= render 'tabletreatments' %>        
         <br>
-        <%= link_to 'New Treatment', new_treatment_path, class: "btn btn-success"  %>
       </div>
       
     </div>
