--- a/app/views/tenacities/index.html.erb
+++ b/app/views/tenacities/index.html.erb
@@ -15,6 +15,25 @@
       </div>     
 
       <div class="col-md-9" id="rightCol">  
+
+
+        <div class="well"><%= search_form_for @search do |f| %>
+          <%= f.condition_fields do |c| %>
+            <div class="field">
+              <%= c.attribute_fields do |a| %>
+                <%= a.attribute_select associations: [:tenacityparams] %>
+              <% end %>
+              <%= c.predicate_select %>
+              <%= c.value_fields do |v| %>
+                <%= v.text_field :value %>
+              <% end %>
+              </div>
+            <% end %>
+            <div class="actions"><%= f.submit "Search", class: "btn btn-info"  %></div>
+          <% end %>
+        </div>
+
+        
         <%= link_to 'New Tenacity', new_tenacity_path, class: "btn btn-success"  %>           
         <%= link_to 'Export XLS', url_for(:format => 'xls'), class: "btn btn-success " %> 
         <%= link_to 'Export CSV', url_for(:format => 'csv'), class: "btn btn-success " %> <br><br>        
