--- a/app/views/results/show.html.erb
+++ b/app/views/results/show.html.erb
@@ -54,7 +54,12 @@
 
             </div>
           </div>    
-          <%= link_to 'Edit Result', edit_result_path(@result), class: "btn btn-warning btn-sm" %> |  | 
+          <%= link_to 'Edit Result', edit_result_path(@result), class: "btn btn-warning btn-sm" %> | 
+          <% if params[:clone] == "attributes" %>
+            
+          <% else %>
+            <%= link_to "Duplicate", result_path(clone: "attributes"), class: "btn btn-success btn-sm"  %>
+          <% end %>           | 
           <%= link_to 'Delete', @result, class: "btn btn-danger btn-sm", method: :delete, data: { confirm: 'Are you sure?' } %> | 
           <%= link_to 'Back to all Results',  results_path, class: "btn btn-info btn-sm" %>
         </div>
