--- a/app/views/spikings/show.html.erb
+++ b/app/views/spikings/show.html.erb
@@ -98,7 +98,12 @@
             </div>
           </div>    
 
-          <%= link_to 'Edit Spiking', edit_spiking_path(@spiking), class: "btn btn-warning btn-sm" %> |  | 
+          <%= link_to 'Edit Spiking', edit_spiking_path(@spiking), class: "btn btn-warning btn-sm" %> | 
+          <% if params[:clone] == "attributes" %>
+            
+          <% else %>
+            <%= link_to "Duplicate", spiking_path(clone: "attributes"), class: "btn btn-success btn-sm"  %>
+          <% end %> | 
           <%= link_to 'Delete', @spiking, class: "btn btn-danger btn-sm", method: :delete, data: { confirm: 'Are you sure?' } %> | 
           <%= link_to 'Back to all Spikings', spikings_path, class: "btn btn-info btn-sm" %>   
         </div>
