--- a/app/views/tenacities/show.html.erb
+++ b/app/views/tenacities/show.html.erb
@@ -71,6 +71,11 @@
             </div>
           </div>    
           <%= link_to 'Edit Tenacity', edit_tenacity_path(@tenacity), class: "btn btn-warning btn-sm" %> |  | 
+          <% if params[:clone] == "attributes" %>
+            
+          <% else %>
+            <%= link_to "Duplicate", tenacity_path(clone: "attributes"), class: "btn btn-success btn-sm"  %>
+          <% end %>
           <%= link_to 'Delete', @tenacity, class: "btn btn-danger btn-sm", method: :delete, data: { confirm: 'Are you sure?' } %> | 
           <%= link_to 'Back to all Tenacities', tenacities_path, class: "btn btn-info btn-sm" %> 
         </div>
