--- a/app/views/treatments/show.html.erb
+++ b/app/views/treatments/show.html.erb
@@ -127,8 +127,13 @@
 
             </div>
           </div>    
-          <%= link_to 'Edit Treatment', edit_treatment_path(@treatment), class: "btn btn-warning btn-sm" %> |  | 
-          <%= link_to 'Delete', @spiking, class: "btn btn-danger btn-sm", method: :delete, data: { confirm: 'Are you sure?' } %> | 
+          <%= link_to 'Edit Treatment', edit_treatment_path(@treatment), class: "btn btn-warning btn-sm" %> | 
+          <% if params[:clone] == "attributes" %>
+            
+          <% else %>
+            <%= link_to "Duplicate", treatment_path(clone: "attributes"), class: "btn btn-success btn-sm"  %>
+          <% end %> | 
+          <%= link_to 'Delete', @treatment, class: "btn btn-danger btn-sm", method: :delete, data: { confirm: 'Are you sure?' } %> | 
           <%= link_to 'Back to all Treatments', treatments_path, class: "btn btn-info btn-sm" %> 
         </div>
       </div>
